Добавлена индикация процесса выполнения команды в Блокноте

--- a/Client SRP/Client SRP.ipynb
+++ b/Client SRP/Client SRP.ipynb
@@ -23,7 +23,23 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49053/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/May/2021 14:10:58] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 14:25:23] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'args': {'bytes': [], 'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRPdfvsa%2Fmeow.txt'}, 'type': 'write', 'serverSign': 'iBkPAlktTSefLMT8ojIzCXoZbDK7LFD9de1opAIlGII='}\n",
+      "http://localhost:49054/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:25:25] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 14:25:35] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -38,7 +54,166 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 14:11:01] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 14:25:37] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 14:25:46] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'args': {'bytes': [208, 160, 208, 176, 208, 177, 208, 190, 209, 130, 208, 176, 208, 181, 209, 130], 'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fmeow.txt'}, 'type': 'write', 'serverSign': 'ZCOOA2ZTJZXn0Q3bBrSXY547NYCqWpOr+9hRKQXs3yE='}\n",
+      "http://localhost:49054/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:25:49] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 14:28:02] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'args': {'bytes': [], 'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fmeow.txt'}, 'type': 'write', 'serverSign': 'JoX+++ROV+fliFcJDlfCS04K+nJJz5n4NZG09uPuS30='}\n",
+      "http://localhost:49054/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:28:05] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 14:28:15] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'args': {'bytes': [], 'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fmeow.txt'}, 'type': 'write', 'serverSign': 'JoX+++ROV+fliFcJDlfCS04K+nJJz5n4NZG09uPuS30='}\n",
+      "http://localhost:49054/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:28:18] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 14:33:25] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fmeow.txt'}, 'type': 'read', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
+      "http://localhost:49054/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:33:27] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 14:35:06] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fmeow.txt'}, 'type': 'read', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
+      "http://localhost:49054/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:35:09] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fmeow.txt'}, 'type': 'read', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
+      "http://localhost:49054/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:35:13] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 14:37:00] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fmeow.txt'}, 'type': 'read', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
+      "http://localhost:49054/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:37:03] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 14:37:06] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'args': {'bytes': [109, 44, 108, 118, 59, 109, 44, 98, 108, 59, 100], 'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fmeow.txt'}, 'type': 'write', 'serverSign': 'dqI29F9BtlyLTLqHhmnvmJ3ta/MRhu0dUw2ZAEqySK4='}\n",
+      "http://localhost:49054/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:37:09] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 14:37:11] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'args': {'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fmeow.txt'}, 'type': 'read', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='}\n",
+      "http://localhost:49054/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:37:14] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 14:37:20] \"\u001b[37mOPTIONS / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'args': {'bytes': [208, 181, 208, 181, 208, 181, 32, 209, 128, 208, 190, 208, 186], 'path': 'C%3A%2FUsers%2Fmaxno%2F%D0%9F%D0%B8%D1%82%D0%BE%D0%BD%2FVKR%2FClient%20SRP%2Fmeow.txt'}, 'type': 'write', 'serverSign': 'D6ZNuTXvlSnxFHVBT3a8/I0yozj67KYkEucGlLx7NFI='}\n",
+      "http://localhost:49054/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:37:22] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -105,11 +280,22 @@
     "    responseObject=dict()\n",
     "    responseObject[\"auth\"]=x.text == \"True\"\n",
     "    if responseObject[\"auth\"] == True:\n",
-    "        if t[\"type\"]==\"read\":\n",
-    "            responseObject[\"result\"]=dict()\n",
-    "            responseObject[\"result\"][\"path\"]=t[\"args\"][\"path\"]\n",
-    "            with open(unquote(t[\"args\"][\"path\"]), \"rb\") as file:\n",
-    "                responseObject[\"result\"][\"bytes\"]=list(file.read())\n",
+    "        try:\n",
+    "            if t[\"type\"]==\"read\":\n",
+    "                responseObject[\"result\"]=dict()\n",
+    "                responseObject[\"result\"][\"path\"]=t[\"args\"][\"path\"]\n",
+    "                with open(unquote(t[\"args\"][\"path\"]), \"rb\") as file:\n",
+    "                    responseObject[\"result\"][\"bytes\"]=list(file.read())\n",
+    "                    responseObject[\"result\"][\"success\"]=\"True\"\n",
+    "            if t[\"type\"]==\"write\":\n",
+    "                responseObject[\"result\"]=dict()\n",
+    "                responseObject[\"result\"][\"path\"]=t[\"args\"][\"path\"]\n",
+    "                with open(unquote(t[\"args\"][\"path\"]), \"wb\") as file:\n",
+    "                    file.write(bytearray(t[\"args\"][\"bytes\"]))\n",
+    "                    responseObject[\"result\"][\"success\"]=\"True\"\n",
+    "                    #responseObject[\"result\"][\"bytes\"]=list(file.read())\n",
+    "        except Exception:\n",
+    "            responseObject[\"result\"][\"success\"]=\"False\"\n",
     "    return responseObject\n",
     "app.run(host=CLIENT_HOST, port=CLIENT_PORT, threaded=True)"
    ]
