--- a/Server SRP/Server SRP.ipynb
+++ b/Server SRP/Server SRP.ipynb
@@ -32,6 +32,246 @@
       "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
       "['read', 'write']\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:19:49] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'write', 'commandHash': '1aec2e1ea3a8cc4d34b1c88c12921c75b6de4be89bffe836de084da940e908ba', 'serverSign': 'WJ668iphJ2IepmDk95SF5fvHEUiMfsYjbWOVZ9kQfc8=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'WJ668iphJ2IepmDk95SF5fvHEUiMfsYjbWOVZ9kQfc8='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:20:46] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'write', 'commandHash': '1aec2e1ea3a8cc4d34b1c88c12921c75b6de4be89bffe836de084da940e908ba', 'serverSign': 'WJ668iphJ2IepmDk95SF5fvHEUiMfsYjbWOVZ9kQfc8=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'WJ668iphJ2IepmDk95SF5fvHEUiMfsYjbWOVZ9kQfc8='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:23:40] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'write', 'commandHash': '594c9fb58158dbf1298cbfdd9c73106ee5cefe56fc8795914927eef0fb7d2141', 'serverSign': '8/8Tq56RDhpP5Cn1tbeH0L976mDoQLozefcD8WBbGIU=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'8/8Tq56RDhpP5Cn1tbeH0L976mDoQLozefcD8WBbGIU='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:25:25] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'write', 'commandHash': 'c8e2835c9442f1db49ba1ebebd1e53fadb37394c80e8c214b04cb20ced936778', 'serverSign': 'iBkPAlktTSefLMT8ojIzCXoZbDK7LFD9de1opAIlGII=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'iBkPAlktTSefLMT8ojIzCXoZbDK7LFD9de1opAIlGII='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:25:37] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:25:49] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'write', 'commandHash': '3a3bec94dd4477446c274d8dbfb37926a3fd31dc7c2b57161489b41555284d17', 'serverSign': 'ZCOOA2ZTJZXn0Q3bBrSXY547NYCqWpOr+9hRKQXs3yE=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'ZCOOA2ZTJZXn0Q3bBrSXY547NYCqWpOr+9hRKQXs3yE='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:28:05] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'write', 'commandHash': '9d05fc8932e514a69ecd3384d534e91da774c3a8b893ff82d051f66498b2405c', 'serverSign': 'JoX+++ROV+fliFcJDlfCS04K+nJJz5n4NZG09uPuS30=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'JoX+++ROV+fliFcJDlfCS04K+nJJz5n4NZG09uPuS30='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:28:18] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'write', 'commandHash': '9d05fc8932e514a69ecd3384d534e91da774c3a8b893ff82d051f66498b2405c', 'serverSign': 'JoX+++ROV+fliFcJDlfCS04K+nJJz5n4NZG09uPuS30=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'JoX+++ROV+fliFcJDlfCS04K+nJJz5n4NZG09uPuS30='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:33:27] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:35:09] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:35:13] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:37:03] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:37:08] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'write', 'commandHash': '6cc699d941178cbe1d6769ea159baf5e000981c8a18b87bf52dc73a115db2cf3', 'serverSign': 'dqI29F9BtlyLTLqHhmnvmJ3ta/MRhu0dUw2ZAEqySK4=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'dqI29F9BtlyLTLqHhmnvmJ3ta/MRhu0dUw2ZAEqySK4='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:37:14] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 14:37:22] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'write', 'commandHash': '1459f3676795c9789aa6a053ba31d6e7d4ea95c5dd7e51b1ca7d93cb6ec042d4', 'serverSign': 'D6ZNuTXvlSnxFHVBT3a8/I0yozj67KYkEucGlLx7NFI=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'D6ZNuTXvlSnxFHVBT3a8/I0yozj67KYkEucGlLx7NFI='\n",
+      "['read', 'write']\n"
+     ]
     }
    ],
    "source": [
