--- a/Portal SRP/Portal SRP.ipynb
+++ b/Portal SRP/Portal SRP.ipynb
@@ -22,30 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/May/2021 13:56:59] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 13:56:59] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [03/May/2021 13:57:00] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 13:57:01] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 13:57:10] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 13:57:12] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 13:57:12] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 13:57:53] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 13:57:58] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 13:58:00] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 13:59:26] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 13:59:48] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 13:59:56] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:00:13] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:00:19] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:05:16] \"\u001b[37mGET /create HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:05:16] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:05:17] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:05:22] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:05:23] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:05:23] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:05:33] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:06:30] \"\u001b[37mGET /getApp?id=608f1351b59c6f34109189d9 HTTP/1.1\u001b[0m\" 200 -\n"
+      " * Running on http://0.0.0.0:49051/ (Press CTRL+C to quit)\n"
      ]
     }
    ],
