--- a/Server SRP/Server SRP.ipynb
+++ b/Server SRP/Server SRP.ipynb
@@ -272,6 +272,70 @@
       "b'D6ZNuTXvlSnxFHVBT3a8/I0yozj67KYkEucGlLx7NFI='\n",
       "['read', 'write']\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 15:18:06] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 15:18:20] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 15:18:28] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'write', 'commandHash': '9cadb22661ac5567c4a45bed000b2c3cf2f106f031cc31f1d778cc0f776e28fd', 'serverSign': 'j/iunq4gW4ifcyCBVVOOYb+dZMKHvZ4NK40dwZhtsGk=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'j/iunq4gW4ifcyCBVVOOYb+dZMKHvZ4NK40dwZhtsGk='\n",
+      "['read', 'write']\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 15:18:35] \"\u001b[37mPOST / HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'appID': '608f1351b59c6f34109189d9', 'type': 'read', 'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a', 'serverSign': 'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs=', 'appURL': 'http://localhost:49054/'}\n",
+      "b'NVuGAH4oBH5OBXSIR5kf+W8/xez2WpyuRID2rsfxPLs='\n",
+      "['read', 'write']\n"
+     ]
     }
    ],
    "source": [
