--- a/Notepad/Notepad.ipynb
+++ b/Notepad/Notepad.ipynb
@@ -21,9 +21,19 @@
      "output_type": "stream",
      "text": [
       " * Running on http://0.0.0.0:49054/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [03/May/2021 14:02:17] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:02:18] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n",
-      "127.0.0.1 - - [03/May/2021 14:02:19] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 15:14:45] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:14:45] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:16:04] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:16:04] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:16:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:16:19] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:17:19] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:17:19] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:17:31] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:17:31] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:18:01] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:18:01] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [03/May/2021 15:18:03] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -37,13 +47,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 14:04:38] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:05:11] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:05:25] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:05:37] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:06:29] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:07:25] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:07:26] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 15:18:16] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:18:16] \"\u001b[37mGET /appSRP.js HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:18:18] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -57,8 +63,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [03/May/2021 14:10:57] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:10:58] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [03/May/2021 15:18:26] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'commandHash': '9cadb22661ac5567c4a45bed000b2c3cf2f106f031cc31f1d778cc0f776e28fd'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "127.0.0.1 - - [03/May/2021 15:18:29] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
+      "127.0.0.1 - - [03/May/2021 15:18:30] \"\u001b[36mGET /appSRP.js HTTP/1.1\u001b[0m\" 304 -\n",
+      "127.0.0.1 - - [03/May/2021 15:18:32] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -66,240 +87,6 @@
      "output_type": "stream",
      "text": [
       "{'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:16:18] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:16:58] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:19:41] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:19:46] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '1aec2e1ea3a8cc4d34b1c88c12921c75b6de4be89bffe836de084da940e908ba'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:20:40] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:20:44] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '1aec2e1ea3a8cc4d34b1c88c12921c75b6de4be89bffe836de084da940e908ba'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:23:37] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '594c9fb58158dbf1298cbfdd9c73106ee5cefe56fc8795914927eef0fb7d2141'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:25:18] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:25:22] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': 'c8e2835c9442f1db49ba1ebebd1e53fadb37394c80e8c214b04cb20ced936778'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:25:34] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:25:35] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:25:46] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '3a3bec94dd4477446c274d8dbfb37926a3fd31dc7c2b57161489b41555284d17'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:28:01] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:28:02] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '9d05fc8932e514a69ecd3384d534e91da774c3a8b893ff82d051f66498b2405c'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:28:15] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '9d05fc8932e514a69ecd3384d534e91da774c3a8b893ff82d051f66498b2405c'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:28:57] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:29:13] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:29:22] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:30:40] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:31:33] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:33:24] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:33:25] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:35:05] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:35:06] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:35:10] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:35:11] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:36:59] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:37:00] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:37:06] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '6cc699d941178cbe1d6769ea159baf5e000981c8a18b87bf52dc73a115db2cf3'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:37:10] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [03/May/2021 14:37:11] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '2cdaeb6d48b5ccd8d6666cf725fa86eaa4cf7aacb172dcdb9082e466af42d94a'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:37:20] \"\u001b[37mPOST /command HTTP/1.1\u001b[0m\" 200 -\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'commandHash': '1459f3676795c9789aa6a053ba31d6e7d4ea95c5dd7e51b1ca7d93cb6ec042d4'}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [03/May/2021 14:37:24] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
@@ -318,7 +105,7 @@
     "from hashlib import sha256\n",
     "from flask import Flask\n",
     "from flask import request,redirect\n",
-    "from flask import Response\n",
+    "from flask import Response,send_from_directory\n",
     "from flask import render_template\n",
     "from os import listdir\n",
     "from os.path import isfile, join\n",
@@ -358,6 +145,9 @@
     "    hash_code = b64encode(HMAC(SECRET_KEY.encode(), request.json[\"commandHash\"].encode(), sha256).digest())\n",
     "    return hash_code.decode('utf-8')\n",
     "\n",
+    "@app.route('/appSRP.js',methods=[\"GET\"])\n",
+    "def script():\n",
+    "    return send_from_directory('templates', 'appSRP.js')\n",
     "app.run(host=APP_HOST, port=APP_PORT, threaded=True)"
    ]
   },
